core/include/foundry_local_mobile/flm_api.h

/** Take the job's result JSON, transferring ownership to the caller. */
FLM_EXPORT flm_status FLM_CALL flm_job_take_result_json(flm_job job, char** out_json) FLM_NOEXCEPT;
/** Release a job handle. If still running, it is cancelled first. */
FLM_EXPORT flm_status FLM_CALL flm_job_release(flm_job job) FLM_NOEXCEPT;
/** Block until the job finishes or `timeout_ms` elapses (negative = wait forever). */
FLM_EXPORT flm_status FLM_CALL flm_job_wait(flm_job job, int32_t timeout_ms) FLM_NOEXCEPT;