core/include/foundry_local_mobile/flm_types.h

/** ABI version. Bumped when the meaning of existing entries changes (never for additions). */
#define FLM_API_VERSION 2
/* -------------------------------------------------------------------------
 * Handles
 *
 * FLM_INVALID_HANDLE (0) is never a valid handle. All handle types are the same
 * underlying integer type; distinct typedefs exist for documentation and for
 * bindings that generate typed wrappers.
 *
 * A handle is an opaque 64-bit value, not a pointer and not a small index. It
 * encodes a kind tag in its high bits, so **every valid handle exceeds 2^56**.
 *
 * That matters for any binding whose host language lacks a 64-bit integer.
 * JavaScript's `number` is an IEEE-754 double and is exact only to 2^53, where
 * the spacing between representable values at handle magnitude is 16 — passing
 * a handle through one silently rounds away the low bits of the slot index. It
 * does not raise; it resolves to a different slot or to none, depending on what
 * happens to be live. Bindings in that position must keep their own registry of
 * small integer ids and never let a raw handle cross the boundary.
 * ------------------------------------------------------------------------- */

typedef uint64_t flm_handle;
#define FLM_INVALID_HANDLE ((flm_handle)0)
typedef flm_handle flm_job;      ///< An in-flight asynchronous operation.
/* -------------------------------------------------------------------------
 * Status codes
 *
 * Every entry point returns flm_status. On a non-OK return, call
 * flm_last_error_message() / flm_last_error_detail_json() on the *same thread*
 * for details.
 * ------------------------------------------------------------------------- */

typedef enum flm_status {
  FLM_OK = 0,
  FLM_ERROR_INTERNAL = 1,           ///< Unexpected failure inside the runtime.
  FLM_ERROR_INVALID_ARGUMENT = 2,   ///< A NULL pointer, malformed JSON or out-of-range value.
  FLM_ERROR_INVALID_HANDLE = 3,     ///< Handle is unknown, released, or of the wrong type.
  FLM_ERROR_INVALID_STATE = 4,      ///< Operation is not legal right now (e.g. infer before load).
  FLM_ERROR_NOT_FOUND = 5,          ///< Model, alias, variant or tool does not exist.
  FLM_ERROR_NOT_IMPLEMENTED = 6,    ///< Not supported on this platform or runtime build.
  FLM_ERROR_CANCELLED = 7,          ///< Cancelled via flm_job_cancel or a callback returning non-zero.
  FLM_ERROR_NETWORK = 8,            ///< Catalog query or download transport failure.
  FLM_ERROR_STORAGE = 9,            ///< Filesystem failure, or insufficient free space.
  FLM_ERROR_OUT_OF_MEMORY = 10,     ///< Allocation failed, or the OS refused the model's footprint.
  FLM_ERROR_INCOMPATIBLE = 11,      ///< No model-package variant is runnable on this device.
  FLM_ERROR_TIMEOUT = 12,           ///< A bounded wait expired.
  FLM_ERROR_UNSUPPORTED_VERSION = 13,  ///< Struct `version` is newer than this build understands.
  FLM_ERROR_MEMORY_PRESSURE = 14,   ///< The OS reclaimed the model; reload and retry.
  FLM_ERROR_SHUTDOWN = 15,          ///< The manager is shutting down; no new work is accepted.
} flm_status;
typedef enum flm_log_level {
  FLM_LOG_VERBOSE = 0,
  FLM_LOG_DEBUG = 1,
  FLM_LOG_INFO = 2,
  FLM_LOG_WARNING = 3,
  FLM_LOG_ERROR = 4,
  FLM_LOG_FATAL = 5,
  FLM_LOG_OFF = 6,
} flm_log_level;
/**
 * Progress for a long-running job.
 *
 * `percent` is always populated (0.0–100.0). Byte counters are populated for downloads
 * and are FLM_UNKNOWN_SIZE elsewhere. `stage` names the current phase, e.g.
 * "resolving", "downloading", "verifying", "extracting", "loading".
 */
#define FLM_UNKNOWN_SIZE ((int64_t)-1)
typedef struct flm_progress {
  uint32_t version;              ///< FLM_API_VERSION.
  float percent;                 ///< 0.0 – 100.0.
  int64_t completed_bytes;       ///< FLM_UNKNOWN_SIZE when not byte-based.
  int64_t total_bytes;           ///< FLM_UNKNOWN_SIZE when the total is not known yet.
  int64_t bytes_per_second;      ///< Smoothed transfer rate; FLM_UNKNOWN_SIZE when unavailable.
  int64_t eta_ms;                ///< Estimated time remaining; FLM_UNKNOWN_SIZE when unavailable.
  const char* stage;             ///< Borrowed, valid only for the duration of the callback.
  const char* detail;            ///< Optional item being processed (e.g. a variant id). May be NULL.
} flm_progress;
/* -------------------------------------------------------------------------
 * Streaming deltas
 * ------------------------------------------------------------------------- */

typedef enum flm_delta_kind {
  FLM_DELTA_TEXT = 0,             ///< Assistant text fragment.
  FLM_DELTA_REASONING = 1,        ///< Chain-of-thought fragment from a reasoning model.
  FLM_DELTA_TOOL_CALL = 2,        ///< A complete tool call the model wants executed.
  FLM_DELTA_SPEECH_PARTIAL = 3,   ///< Transcription hypothesis; replaces the previous partial.
  FLM_DELTA_SPEECH_FINAL = 4,     ///< Transcription segment is stable.
  FLM_DELTA_USAGE = 5,            ///< Token accounting update.
  FLM_DELTA_COMPLETED = 6,        ///< Terminal event; `finish_reason` is meaningful.
} flm_delta_kind;
typedef enum flm_finish_reason {
  FLM_FINISH_NONE = 0,        ///< Still generating.
  FLM_FINISH_STOP = 1,        ///< Natural end or stop sequence.
  FLM_FINISH_LENGTH = 2,      ///< Hit the output token limit.
  FLM_FINISH_TOOL_CALLS = 3,  ///< Model is waiting on tool results.
  FLM_FINISH_CANCELLED = 4,   ///< Cancelled by the caller.
  FLM_FINISH_ERROR = 5,       ///< Aborted by an error.
} flm_finish_reason;
/**
 * A single streaming event.
 *
 * All `const char*` members are **borrowed** and valid only for the duration of the
 * callback. Copy anything you need to retain. Strings are UTF-8 and may contain
 * embedded NULs only if the paired length field says so.
 */
typedef struct flm_delta {
  uint32_t version;                 ///< FLM_API_VERSION.
  flm_delta_kind kind;
  const char* text;                 ///< TEXT / REASONING / SPEECH_*: the fragment. May be NULL.
  size_t text_length;               ///< Byte length of `text`, excluding any terminator.
  const char* tool_call_id;         ///< TOOL_CALL only.
  const char* tool_name;            ///< TOOL_CALL only.
  const char* tool_arguments_json;  ///< TOOL_CALL only; JSON object.
  int64_t start_time_ms;            ///< SPEECH_*: offset from the start of the audio.
  int64_t end_time_ms;              ///< SPEECH_*: offset from the start of the audio.
  int64_t prompt_tokens;            ///< USAGE / COMPLETED.
  int64_t completion_tokens;        ///< USAGE / COMPLETED.
  flm_finish_reason finish_reason;  ///< COMPLETED only.
} flm_delta;
/* -------------------------------------------------------------------------
 * Callbacks
 *
 * All callbacks are invoked on a core job-pool thread, never on the caller's thread.
 * They must not block for long and must not re-enter the ABI with the same job handle
 * (other handles are fine). Bindings are responsible for hopping to the appropriate
 * dispatch queue / coroutine context / isolate.
 *
 * LIFETIME, and the most common way to get this wrong: every struct and string handed
 * to a callback is borrowed and valid ONLY for the duration of that call. The core
 * builds them on the stack of the calling thread and destroys them the moment the
 * callback returns. A binding that hands the raw pointer to another thread, queue or
 * isolate and reads it there is reading freed memory. Copy everything you need out
 * before returning — which, on the streaming delta path, means copying per token.
 * ------------------------------------------------------------------------- */

/**
 * Progress notification. Return non-zero to request cancellation of the job.
 *
 * `progress` and its strings are borrowed for the duration of the call only.
 */
typedef int32_t(FLM_CALLBACK* flm_progress_callback)(flm_job job, const flm_progress* progress, void* user_data);
/**
 * Streaming event. Return non-zero to request cancellation of the job.
 *
 * `delta` and its strings are borrowed for the duration of the call only.
 */
typedef int32_t(FLM_CALLBACK* flm_delta_callback)(flm_job job, const flm_delta* delta, void* user_data);
/**
 * Terminal notification for a job. Invoked exactly once per job, even on cancellation.
 *
 * `error_json` is NULL when `status` is FLM_OK; otherwise it is a borrowed UTF-8 JSON
 * object of the shape produced by flm_last_error_detail_json(), valid for the duration
 * of the call only.
 *
 * After this returns, the job's result (if any) can still be read with
 * flm_job_take_result_json until flm_job_release is called.
 */
typedef void(FLM_CALLBACK* flm_completion_callback)(flm_job job, flm_status status, const char* error_json,
                                                    void* user_data);
/** Log sink. `message` is borrowed and valid only for the duration of the call. */
typedef void(FLM_CALLBACK* flm_log_callback)(flm_log_level level, const char* tag, const char* message,
                                             void* user_data);