bindings/flutter/lib/src/bindings/bindings.dart


  int flm_job_take_result_json(
    int job,
    ffi.Pointer<ffi.Pointer<ffi.Char>> out_json,
  ) =>
      _flm_job_take_result_json(job, out_json);
  late final _flm_job_take_result_jsonPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Uint64,
              ffi.Pointer<ffi.Pointer<ffi.Char>>)>>('flm_job_take_result_json');
  late final _flm_job_take_result_json = _flm_job_take_result_jsonPtr.asFunction<
      int Function(int, ffi.Pointer<ffi.Pointer<ffi.Char>>)>(isLeaf: true);

  int flm_job_release(int job) => _flm_job_release(job);
  late final _flm_job_releasePtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Uint64)>>(
          'flm_job_release');
  late final _flm_job_release =
      _flm_job_releasePtr.asFunction<int Function(int)>(isLeaf: true);

  int flm_job_wait(int job, int timeout_ms) => _flm_job_wait(job, timeout_ms);
  late final _flm_job_waitPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Uint64, ffi.Int32)>>('flm_job_wait');
  late final _flm_job_wait =
      _flm_job_waitPtr.asFunction<int Function(int, int)>();
}

// -----------------------------------------------------------------------------
// Native structs (opaque to Dart other than a version field and native size)
// -----------------------------------------------------------------------------

/// C `flm_progress` — layout must match `flm_types.h`.
final class flm_progress extends ffi.Struct {
  @ffi.Uint32()
  external int version;

  @ffi.Float()
  external double percent;

  @ffi.Int64()
  external int completed_bytes;

  @ffi.Int64()
  external int total_bytes;

  @ffi.Int64()
  external int bytes_per_second;

  @ffi.Int64()
  external int eta_ms;

  external ffi.Pointer<ffi.Char> stage;

  external ffi.Pointer<ffi.Char> detail;
}

/// C `flm_delta`.
final class flm_delta extends ffi.Struct {
  @ffi.Uint32()
  external int version;

  @ffi.Int32()
  external int kind;

  external ffi.Pointer<ffi.Char> text;

  @ffi.Size()
  external int text_length;

  external ffi.Pointer<ffi.Char> tool_call_id;

  external ffi.Pointer<ffi.Char> tool_name;

  external ffi.Pointer<ffi.Char> tool_arguments_json;

  @ffi.Int64()
  external int start_time_ms;

  @ffi.Int64()
  external int end_time_ms;

  @ffi.Int64()
  external int prompt_tokens;

  @ffi.Int64()
  external int completion_tokens;

  @ffi.Int32()
  external int finish_reason;
}

// -----------------------------------------------------------------------------
// Native callback typedefs
// -----------------------------------------------------------------------------

typedef flm_progress_callback_native = ffi.Int32 Function(
    ffi.Uint64 job, ffi.Pointer<flm_progress> progress, ffi.Pointer<ffi.Void> user_data);
typedef flm_progress_callback = ffi.Pointer<ffi.NativeFunction<flm_progress_callback_native>>;

typedef flm_delta_callback_native = ffi.Int32 Function(
    ffi.Uint64 job, ffi.Pointer<flm_delta> delta, ffi.Pointer<ffi.Void> user_data);
typedef flm_delta_callback = ffi.Pointer<ffi.NativeFunction<flm_delta_callback_native>>;

typedef flm_completion_callback_native = ffi.Void Function(
    ffi.Uint64 job,
    ffi.Int32 status,
    ffi.Pointer<ffi.Char> error_json,
    ffi.Pointer<ffi.Void> user_data);
typedef flm_completion_callback = ffi.Pointer<ffi.NativeFunction<flm_completion_callback_native>>;

typedef flm_log_callback_native = ffi.Void Function(
    ffi.Int32 level,
    ffi.Pointer<ffi.Char> tag,
    ffi.Pointer<ffi.Char> message,
    ffi.Pointer<ffi.Void> user_data);
typedef flm_log_callback = ffi.Pointer<ffi.NativeFunction<flm_log_callback_native>>;

// -----------------------------------------------------------------------------
// Constants
// -----------------------------------------------------------------------------

/// Sentinel written into `flm_progress` counters when a byte count is not known.
const int FLM_UNKNOWN_SIZE = -1;

/// Sentinel handle. `0` is never a valid handle.
const int FLM_INVALID_HANDLE = 0;

/// ABI version this file was generated against. Matches `FLM_API_VERSION` in the header.
const int FLM_API_VERSION = 2;

// -----------------------------------------------------------------------------
// Enum mirrors
// -----------------------------------------------------------------------------

// Kept as plain `int` constants (matching ffigen's `as-int` config). The idiomatic
// Dart layer wraps these in real enums; nothing outside `lib/src/` should depend on
// the numeric values.

abstract class FlmStatus {
  static const int ok = 0;
  static const int internal = 1;
  static const int invalidArgument = 2;
  static const int invalidHandle = 3;
  static const int invalidState = 4;
  static const int notFound = 5;
  static const int notImplemented = 6;
  static const int cancelled = 7;
  static const int network = 8;
  static const int storage = 9;
  static const int outOfMemory = 10;
  static const int incompatible = 11;
  static const int timeout = 12;
  static const int unsupportedVersion = 13;
  static const int memoryPressure = 14;
  static const int shutdown = 15;
}

abstract class FlmLogLevel {
  static const int verbose = 0;
  static const int debug = 1;
  static const int info = 2;
  static const int warning = 3;
  static const int error = 4;
  static const int fatal = 5;
  static const int off = 6;
}

abstract class FlmDeviceKind {
  static const int unknown = 0;
  static const int cpu = 1;
  static const int gpu = 2;
  static const int npu = 3;
}

abstract class FlmJobState {
  static const int pending = 0;
  static const int running = 1;
  static const int succeeded = 2;
  static const int failed = 3;
  static const int cancelled = 4;
}

abstract class FlmDeltaKind {
  static const int text = 0;
  static const int reasoning = 1;
  static const int toolCall = 2;
  static const int speechPartial = 3;
  static const int speechFinal = 4;
  static const int usage = 5;
  static const int completed = 6;
}

abstract class FlmFinishReason {
  static const int none = 0;
  static const int stop = 1;
  static const int length = 2;
  static const int toolCalls = 3;
  static const int cancelled = 4;
  static const int error = 5;
}

abstract class FlmLifecycleEvent {
  static const int foreground = 0;
  static const int background = 1;
  static const int memoryWarning = 2;
  static const int memoryCritical = 3;
  static const int lowPower = 4;
  static const int thermalThrottling = 5;
  static const int networkMetered = 6;
  static const int networkUnmetered = 7;
}
